# devious_enchanted_bot

./: Cargo.toml  test_payload.json
clans/: 2305072345.json
src/: bot_manager.rs  commands.rs  db_manager.rs  errors.rs  file_manager.rs  main.rs  model.rs  wg_api.rs
