[package]
name = "devious_enchanted_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
poise = "0.6.1"
reqwest = "0.12.8"
rusqlite = "0.32.1"
serde = "1.0.210"
serde_json = "1.0.128"
serenity = "0.12.2"
thiserror = "1.0.64"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
